--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "ethereum-blockies-base64": "^1.0.2",
     "profile-hover": "^1.1.1",
     "react-linkify": "^1.0.0-alpha",
+    "react-tilt": "^0.1.4",
     "svg-inline-loader": "^0.8.0"
   }
 }
