--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "3box-comments-react",
-  "version": "0.0.1-beta.11",
-  "description": "Comments component for decentralized applications by 3Box",
+  "name": "3box-chatbox-react",
+  "version": "0.0.1-beta.1",
+  "description": "Chat component for decentralized applications by 3Box",
   "main": "./dist/index.js",
   "author": "3box.io",
   "license": "MIT",
@@ -9,7 +9,7 @@
     "Kenzo Nakamura <kenzo@nyu.edu>"
   ],
   "keywords": [
-    "comments",
+    "chat",
     "3Box",
     "decentralized",
     "ethereum"
@@ -66,7 +66,7 @@
     "babel-core": "7.0.0-bridge.0"
   },
   "dependencies": {
-    "3box": "^1.12.0-beta.1",
+    "3box": "^1.12.0",
     "3id-resolver": "0.0.6",
     "@babel/runtime": "^7.6.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -74,6 +74,7 @@
     "ethereum-blockies-base64": "^1.0.2",
     "profile-hover": "^1.1.1",
     "react-linkify": "^1.0.0-alpha",
+    "react-text-loop": "^2.1.1",
     "react-tilt": "^0.1.4",
     "svg-inline-loader": "^0.8.0"
   }
