--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "babel-core": "7.0.0-bridge.0"
   },
   "dependencies": {
-    "3box": "^1.14.0",
+    "3box": "^1.14.1-beta.1",
     "3id-resolver": "0.0.6",
     "@babel/runtime": "^7.6.0",
     "babel-core": "^7.0.0-bridge.0",
