--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3box-chatbox-react",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "description": "Chat component for decentralized applications by 3Box",
   "author": "3box.io",
   "license": "MIT",
@@ -49,7 +49,7 @@
     "react": "^16.6.0",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^16.6.0",
-    "react-hot-loader": "next",
+    "react-hot-loader": "^4.12.18",
     "react-test-renderer": "^16.0.0",
     "regenerator-runtime": "^0.12.1",
     "sass-loader": "^7.0.1",
@@ -67,7 +67,6 @@
   },
   "dependencies": {
     "3box": "^1.16.1",
-    "3box-comments-react": "0.0.5-beta.1",
     "3id-resolver": "0.0.6",
     "@babel/cli": "^7.7.7",
     "@babel/runtime": "^7.6.0",
