--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3box-chatbox-react",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Chat component for decentralized applications by 3Box",
   "author": "3box.io",
   "license": "MIT",
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "analyze": "source-map-explorer 'dist/index.js'",
-    "build": "webpack --config webpack.config.babel.js",
+    "build": "webpack --config webpack.config.babel.js && npm run build:es5",
     "build:es5": "rm -rf ./lib; ./node_modules/.bin/babel src --out-dir lib --source-maps inline --copy-files --ignore=src/__tests__/,src/__mocks__/",
     "build-examples": "webpack --config examples/webpack.config.babel.js --progress",
     "clean": "rm -rf dist coverage",
